# hangeul_jamo_rs

./: .gitignore  Cargo.toml  README.md  RELEASE.md  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  release.yml
benches/: benchmark.rs
src/: constants.rs  core.rs  hcj.rs  jamo.rs  lib.rs  lookup_tables.rs
tests/: test.rs  test_python.py
